--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@ body {
   background-attachment: fixed;
   background-size: cover;
   width: 100%;
+  overflow-x: hidden;
 }
 
-.thumbnail-image {
+img {
   padding: 10px;
 }
 
@@ -25,5 +26,15 @@ body {
   padding-bottom: 10px;
   float: left;
   height: 300px;
+  width: 100%;
   white-space: nowrap;
+
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
+}
+
+.highlighted-image {
+  border: 5px solid #555;
 }
