--- a/style.css
+++ b/style.css
@@ -6,16 +6,13 @@ html {
 }
 
 body {
-  padding: 10;
-  margin: 10;
-  height: 100%;
-  width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  display: flex;
   background-image: url("./img/background.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  width: 100%;
-  overflow-x: hidden;
 }
 
 img {
@@ -25,16 +22,48 @@ img {
 .collection-row {
   padding-bottom: 10px;
   float: left;
-  height: 300px;
+  height: 200px;
   width: 100%;
   white-space: nowrap;
-
   position: relative;
   overflow-x: hidden;
   overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
+  margin-right: 360px;
+}
+
+label {
+  color: whitesmoke;
+  font-size: 32px;
+  font-weight: bold;
 }
 
 .highlighted-image {
-  border: 5px solid #555;
+  background-color: whitesmoke;
+  display: inline-block;
+}
+
+nav {
+  width: 150px;
+  float: left;
+  display: inline;
+  margin: 0;
+  padding: 0;
+}
+
+#imageContainer {
+  flex: 1;
+  width: 100%;
+  overflow-x: hidden;
+  padding: 10;
+  margin: 10;
+  height: 100%;
+  width: 100%;
+  float: left;
+  padding: 30px;
+}
+
+img {
+  width: 20%;
+  height: auto;
 }
