--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ img {
   overflow-y: hidden;
 }
 
-label {
+.heading-label {
   color: whitesmoke;
   font-size: 32px;
   font-weight: bold;
@@ -40,20 +40,10 @@ label {
   display: inline-block;
 }
 
-nav {
-  width: 150px;
-  float: left;
-  display: inline;
-  margin: 0;
-  padding: 0;
-}
-
 #imageContainer {
   flex: 1;
   width: 100%;
   overflow-x: hidden;
-  padding: 10;
-  margin: 10;
   height: 100%;
   width: 100%;
   float: left;
@@ -63,4 +53,42 @@ nav {
 img {
   width: 300px;
   height: auto;
+}
+
+nav {
+  width: 200px;
+}
+
+#currentSelectionLabel {
+  font-size: 18px;
+  position: fixed;
+  padding: 10px;
+  width: 175px;
+  text-align: center;
+  color: whitesmoke;
+  font-weight: bold;
+}
+
+/* The Modal */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.preview-content {
+  background-color: black;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%; /* Could be more or less, depending on screen size */
+  text-align: center;
 }
