--- a/style.css
+++ b/style.css
@@ -15,8 +15,14 @@ body {
   background-size: cover;
 }
 
-img {
-  padding: 10px;
+#imageContainer {
+  flex: 1;
+  width: 100%;
+  overflow-x: hidden;
+  height: 100%;
+  width: 100%;
+  float: left;
+  padding: 30px;
 }
 
 .collection-row {
@@ -40,18 +46,9 @@ img {
   display: inline-block;
 }
 
-#imageContainer {
-  flex: 1;
-  width: 100%;
-  overflow-x: hidden;
-  height: 100%;
-  width: 100%;
-  float: left;
-  padding: 30px;
-}
-
 img {
   width: 300px;
+  padding: 10px;
   height: auto;
 }
 
@@ -69,26 +66,24 @@ nav {
   font-weight: bold;
 }
 
-/* The Modal */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* Modal Content/Box */
-.preview-content {
+.modal-content {
   background-color: black;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto;
   padding: 20px;
-  border: 1px solid #888;
-  width: 30%; /* Could be more or less, depending on screen size */
+  border: 1px solid whitesmoke;
+  min-width: 300px;
+  max-width: 600px;
   text-align: center;
 }
